# tasker

./: .gitignore  Cargo.toml  LICENSE  README.md  tasks.json
docs/plans/: 2025-05-23-init-project.md  2026-05-23-soft-delete-trash-mode.md  2026-05-25-clickable-urls.md  2026-05-26-visual-improvements.md
src/: app.rs  input.rs  links.rs  main.rs  storage.rs  ui.rs
